# webmention-rs

./: :w  Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
webmention/: Cargo.toml
webmention/src/: client.rs  lib.rs  parser.rs  result.rs  types.rs
webmention/src/client/: builder.rs  mod.rs  scraper.rs  source.rs
webmention/support/: links.json
