[package]
name = "webmention-cli"
version = "0.1.0"
authors = ["Nicholas Young <hi@secretfader.com>"]
edition = "2018"
description = "CLI tool to query for and send Webmentions"
readme = "../README.md"

[dependencies]
log = "0.4.8"
structopt = "0.3.12"
anyhow = "1.0.28"
tokio = { version = "0.2.16", features = ["full"] }
webmention = { version = "0.1.0", features = ["client"] }
pretty_env_logger = "0.4.0"

[[bin]]
name = "webmention"
path = "src/main.rs"
