[package]
name = "webmention-cli"
version = "0.1.0"
authors = ["Nicholas <nyoung@uptime.ventures>"]
edition = "2018"
description = "CLI tool to retrieve Webmentions"
readme = "../README.md"

[dependencies]
structopt = "0.3.12"
anyhow = "1.0.28"
tokio = { version = "0.2.16", features = ["full"] }
webmention = { version = "0.1.0", features = ["client"] }
url = "2.1.1"
log = "0.4.8"

[[bin]]
name = "webmention"
path = "src/main.rs"
