[package]
name = "webmention-tests"
version = "0.1.0"
authors = ["Nicholas Young <hi@secretfader.com>"]
edition = "2018"
description = "Implementation of the Webmention.Rocks test suite, designed to thoroughly evaluate webmention-rs"
publish = false

[dev-dependencies]
webmention = { version = "0.1.0", features = ["client"] }
tokio = { version = "0.2.17", features = ["macros"] }
