[package]
name = "webmention"
version = "0.1.0"
authors = ["Nicholas Young <hi@secretfader.com>"]
edition = "2018"
description = "Send and receive Webmentions, an open notification standard from the IndieWeb ecosystem."
readme = "../README.md"

[dependencies]
log = "0.4.8"
thiserror = "1.0.14"
http = "0.2.1"
url = "2.1.1"
async-trait = "0.1.30"
regex = "1.3.6"
scraper = "0.11.0"
serde_json = { version = "1.0.51", optional = true }

[dependencies.reqwest]
version = "0.10.4"
optional = true
features = ["default-tls"]
default-features = false

[dependencies.serde]
version = "1.0.106"
optional = true
default-features = false

[features]
client = [
  "serde",
  "serde_json",
  "reqwest/json",
  "url/serde",
]
default = []
